--- a/api/.htaccess
+++ b/api/.htaccess
@@ -2,6 +2,6 @@
 	RewriteEngine On
 	RewriteCond %{REQUEST_FILENAME} !-d
 	RewriteCond %{REQUEST_FILENAME} !-f
-	RewriteRule ^(.*)$ index.php?request=$1 [L,QSA]
+	RewriteRule ^(.*)$ main.php?request=$1 [L,QSA]
+	SetEnv TZ Asia/Manila
 </IfModule>
-
